# ProyectoDeteccion

./: .env-local  .gitignore  README.md  Script2.py  pyproject.toml  script1.ipynb
.soluciones/: script1_solucion.ipynb  script2_solucion.py
ContenidoExtra/: Enlaces.txt  Instrucciones.txt
ContenidoExtra/Ejemplos/: Convolucion.asv  Convolucion.m
